--- a/bbb.io-kernel/suite/bookworm/debian/control
+++ b/bbb.io-kernel/suite/bookworm/debian/control
@@ -20,11 +20,11 @@ Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.168-ti-r61
+ linux-image-5.10.168-ti-r62
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.168-ti-r61
+Recommends: libpruio-modules-5.10.168-ti-r62
 Description: BeagleBoard.org 5.10-ti
  This metapackage will install linux-image-5.10-ti in Debian.
 
@@ -32,17 +32,17 @@ Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.168-ti-r61
+ linux-image-5.10.168-ti-r62
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.168-ti-r61
- , ti-sgx-ti335x-modules-5.10.168-ti-r61
- , rtl8723bu-modules-5.10.168-ti-r61
- , rtl8723du-modules-5.10.168-ti-r61
- , rtl8821cu-modules-5.10.168-ti-r61
- , qcacld-2.0-modules-5.10.168-ti-r61
+ libpruio-modules-5.10.168-ti-r62
+ , ti-sgx-ti335x-modules-5.10.168-ti-r62
+ , rtl8723bu-modules-5.10.168-ti-r62
+ , rtl8723du-modules-5.10.168-ti-r62
+ , rtl8821cu-modules-5.10.168-ti-r62
+ , qcacld-2.0-modules-5.10.168-ti-r62
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti for am335x
  This metapackage will install linux-image-5.10-ti for am335x in Debian.
@@ -51,13 +51,13 @@ Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.168-ti-r61
+ linux-image-5.10.168-ti-r62
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.168-ti-r61
- , ti-sgx-jacinto6evm-modules-5.10.168-ti-r61
+ libpruio-modules-5.10.168-ti-r62
+ , ti-sgx-jacinto6evm-modules-5.10.168-ti-r62
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti for am57xx
  This metapackage will install linux-image-5.10-ti for am57xx in Debian.
@@ -66,11 +66,11 @@ Package: bbb.io-kernel-5.10-ti-rt
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.168-ti-rt-r61
+ linux-image-5.10.168-ti-rt-r62
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.168-ti-rt-r61
+Recommends: libpruio-modules-5.10.168-ti-rt-r62
 Description: BeagleBoard.org 5.10-ti-rt
  This metapackage will install linux-image-5.10-ti-rt in Debian.
 
@@ -78,17 +78,17 @@ Package: bbb.io-kernel-5.10-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.168-ti-rt-r61
+ linux-image-5.10.168-ti-rt-r62
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.168-ti-rt-r61
- , ti-sgx-ti335x-modules-5.10.168-ti-rt-r61
- , rtl8723bu-modules-5.10.168-ti-rt-r61
- , rtl8723du-modules-5.10.168-ti-rt-r61
- , rtl8821cu-modules-5.10.168-ti-rt-r61
- , qcacld-2.0-modules-5.10.168-ti-rt-r61
+ libpruio-modules-5.10.168-ti-rt-r62
+ , ti-sgx-ti335x-modules-5.10.168-ti-rt-r62
+ , rtl8723bu-modules-5.10.168-ti-rt-r62
+ , rtl8723du-modules-5.10.168-ti-rt-r62
+ , rtl8821cu-modules-5.10.168-ti-rt-r62
+ , qcacld-2.0-modules-5.10.168-ti-rt-r62
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti-rt for am335x
  This metapackage will install linux-image-5.10-ti-rt for am335x in Debian.
@@ -97,13 +97,13 @@ Package: bbb.io-kernel-5.10-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.168-ti-rt-r61
+ linux-image-5.10.168-ti-rt-r62
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.168-ti-rt-r61
- , ti-sgx-jacinto6evm-modules-5.10.168-ti-rt-r61
+ libpruio-modules-5.10.168-ti-rt-r62
+ , ti-sgx-jacinto6evm-modules-5.10.168-ti-rt-r62
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti-rt for am57xx
  This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
@@ -112,11 +112,11 @@ Package: bbb.io-kernel-6.1-ti
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-6.1.26-ti-r2
+ linux-image-6.1.26-ti-r3
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.26-ti-r2
+Recommends: libpruio-modules-6.1.26-ti-r3
 Description: BeagleBoard.org 6.1-ti
  This metapackage will install linux-image-6.1-ti in Debian.
 
@@ -124,13 +124,13 @@ Package: bbb.io-kernel-6.1-ti-am335x
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-6.1.26-ti-r2
+ linux-image-6.1.26-ti-r3
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-6.1.26-ti-r2
- , rtl8723du-modules-6.1.26-ti-r2
+ libpruio-modules-6.1.26-ti-r3
+ , rtl8723du-modules-6.1.26-ti-r3
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 6.1-ti for am335x
  This metapackage will install linux-image-6.1-ti for am335x in Debian.
@@ -139,15 +139,56 @@ Package: bbb.io-kernel-6.1-ti-am57xx
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-6.1.26-ti-r2
+ linux-image-6.1.26-ti-r3
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-6.1.26-ti-r2
+ libpruio-modules-6.1.26-ti-r3
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 6.1-ti for am57xx
  This metapackage will install linux-image-6.1-ti for am57xx in Debian.
+
+Package: bbb.io-kernel-6.1-ti-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.26-ti-rt-r3
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.26-ti-rt-r3
+Description: BeagleBoard.org 6.1-ti-rt
+ This metapackage will install linux-image-6.1-ti-rt in Debian.
+
+Package: bbb.io-kernel-6.1-ti-rt-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.26-ti-rt-r3
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.26-ti-rt-r3
+ , rtl8723du-modules-6.1.26-ti-rt-r3
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 6.1-ti-rt for am335x
+ This metapackage will install linux-image-6.1-ti-rt for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-ti-rt-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.26-ti-rt-r3
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.26-ti-rt-r3
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 6.1-ti-rt for am57xx
+ This metapackage will install linux-image-6.1-ti-rt for am57xx in Debian.
 
 Package: bbb.io-kernel-5.10-bone
 Section: metapackages
