--- a/bbb.io-kernel/suite/trixie/debian/control
+++ b/bbb.io-kernel/suite/trixie/debian/control
@@ -217,6 +217,24 @@ Recommends: libpruio-modules-6.1.35-bone20
 Description: BeagleBoard.org 6.1-bone for am335x
  This metapackage will install linux-image-6.1-bone for am335x in Debian.
 
+Package: bbb.io-kernel-6.3-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.3.11-bone12,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.3.11-bone12
+Description: BeagleBoard.org 6.3-bone for am335x
+ This metapackage will install linux-image-6.3-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.4-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.4.1-bone9,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.4.1-bone9
+Description: BeagleBoard.org 6.4-bone for am335x
+ This metapackage will install linux-image-6.4-bone for am335x in Debian.
+
 Package: bbb.io-kernel-5.10-bone-rt
 Section: metapackages
 Architecture: armhf
