--- a/bb-code-server/suite/bullseye/debian/system/code-server@.service
+++ b/bb-code-server/suite/bullseye/debian/system/code-server@.service
@@ -5,7 +5,7 @@ After=network.target
 
 [Service]
 Type=exec
-ExecStart=/opt/bb-code-server/app/bin/code-server --disable-telemetry --disable-update-check
+ExecStart=/opt/bb-code-server/app/bin/code-server --cert --disable-telemetry --disable-update-check --bind-addr 0.0.0.0:3000
 Restart=always
 User=%i
 
