--- a/bb-code-server/suite/noble/debian/control
+++ b/bb-code-server/suite/noble/debian/control
@@ -3,7 +3,7 @@ Section: misc
 Priority: extra
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
 Build-Depends:
- debhelper (>= 9)
+ debhelper (>= 10)
 Standards-Version: 4.5.1
 Homepage: https://github.com/coder/code-server
 
@@ -13,7 +13,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
  , libatomic1
 Depends:
- systemd (>= 230)
+ systemd
  , dphys-swapfile
 Description: code-server installer for beagleboard.org
  code-server is a tool to Run VS Code on any machine anywhere and access it in the browser.
